--- a/apps/react-my-playground/index.html
+++ b/apps/react-my-playground/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>New</title>
+    <title>ReactMyPlayground</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
