--- a/apps/react-my-playground/index.html
+++ b/apps/react-my-playground/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,9 +10,9 @@
       content="React Micro Frontend example app 1"
     />
     <link rel="apple-touch-icon" href="favicons/logo192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="favicons/manifest.json" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!-- <link rel="manifest" href="favicons/manifest.json" /> -->
     <title>React Sandbox</title>
   </head>
   <body>
