--- a/apps/learn-german/simple-expressions.html
+++ b/apps/learn-german/simple-expressions.html
@@ -119,7 +119,7 @@
         <ul>
           <li>
             <a
-              href="/"
+              href="./"
               class="text-green-300 hover:underline hover:text-blue-300 active:text-red-300"
               >Home</a
             >
